--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">RecruitingApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">ホーム</string>
+    <string name="title_search">検索</string>
+    <string name="title_register">イベント登録</string>
+    <string name="title_calendar">カレンダー</string>
 </resources>
